[build-system]
requires = ["maturin>=1.0,<2.0", "tomli>=2.0.0"]
build-backend = "maturin"

[project]
name = "xlang-py"
version = "0.1.0"
description = "XLang Python bindings"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Development Status :: 3 - Alpha",
]

[tool.maturin]
module-name = "xlang.xlang_py"
python-source = "src_py"
features = ["pyo3/extension-module"]